--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Mfc-dashboard</title>
     <base href="http://localhost:8080/">
     <link rel="stylesheet" href="/style.01fcc594003c040b0f0e.css?e6660e8198f0a92924f5">
-    <link rel="stylesheet" href="/style.2cd9afd9e7b54668dc98.css?53304bb45fce285617c8">
-
 </head>
 <body>
 
