--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="uk-navbar-right ">
                 <div class="uk-navbar-item">
                     <ul class="uk-navbar-nav">
-                        <li><span class="uk-text-bold uk-visible@m"> Производство и установка натяжных потолков в Волгограде и обл.</span>
+                        <li><span class="uk-text-bold uk-visible@m"> Производство и установка натяжных потолков в Москве и обл.</span>
                         </li>
                         <li></li>
                     </ul>
@@ -909,7 +909,7 @@
             </div>
 
             <div class="">
-                <span>Производство и установка натяжных потолков в Волгограде и обл.</span>
+                <span>Производство и установка натяжных потолков в Москве и обл.</span>
             </div>
             <div class="">
                 <a class="uk-button uk-button-primary uk-border-rounded" href="">Проконсультируйтесь по
@@ -987,7 +987,7 @@
                 <div class="uk-background-cover" style="background-image: url('content/case-1/img-2.jpg');"
                      uk-height-viewport></div>
                 <div class="uk-padding-large">
-                    <h2>Проект: Матовый потолок Волгоград</h2>
+                    <h2>Проект: Матовый потолок Москва</h2>
 
                     <div class="work-type">
                         <ul class="uk-list uk-list-divider">
